--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="shortcut icon" href="./public/images/logo-icon.png" type="image/x-icon"/>
     
     <link rel="stylesheet" href="./public/css/main.css" />
+    <link rel="stylesheet" href="./public/css/page-landing.css" />
+    <link rel="stylesheet" href="./public/css/animations.css" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     
@@ -17,18 +19,18 @@
     <div id="page-landing">
       <div id="container">
         <header>
-          <img src="./public/images/logo.svg" alt="Logomarca de Happy" />
-          <div>
+          <img class="animate-up" id="logo" src="./public/images/logo.svg" alt="Logomarca de Happy" />
+          <div class="location animate-up">
             <strong>Rio do Sul</strong>
             <p>Santa Catarina</p>
           </div>
         </header>
 
         <main>
-          <h1>Leve felicidade para o mundo</h1>
-          <section>
-            <p>Visite orfanatos e mude o dia de muitas crianças</p>
-            <a href="#" title="Visite orfanatos">
+          <h1 class="animate-up">Leve felicidade para o mundo</h1>
+          <section class="visit">
+            <p class="animate-up">Visite orfanatos e mude o dia de muitas crianças</p>
+            <a href="#" title="Visite orfanatos" class="animate-up">
               <img src="./public/images/arrow.svg" alt="Ir para o mapa" />
             </a>
           </section>
