--- a/orphanages.html
+++ b/orphanages.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap" rel="stylesheet">
   </head>
   <body>
-      <div id="page-orphanage">
+      <div id="page-orphanages">
         <aside>
           <header>
             <img src="./public/images/map-marker.svg" alt="Happy">
