--- a/orphanages.html
+++ b/orphanages.html
@@ -24,7 +24,7 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
   </head>
   <body>
       <div id="page-orphanages">
