--- a/orphanages.html
+++ b/orphanages.html
@@ -42,7 +42,7 @@
             <p>Santa Catarina</p>
           </footer>
         </aside>
-        <div id="mapid">
+        <div id="mapid" class="animate-appear">
           <a href="create-orphanage.html" class="create-orphanage" title="Cadastre um orfanato">
             <img src="./public/images/plus.svg" alt="criar orfanato">
           </a>
