--- a/index.html
+++ b/index.html
@@ -5,32 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Happy</title>
-    <link
-      rel="shortcut icon"
-      href="public/images/logo-icon.png"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="public/images/logo-icon.png" type="image/x-icon"/>
+
+    <link rel="stylesheet" href="public/CSS/main.css" />
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap" rel="stylesheet">
   </head>
   <body>
-    <header>
-      <img src="public/images/logo.svg" alt="Logomarca de Happy" />
+    <div id="page-landing">
+      <div id="container">
+        <header>
+          <img src="public/images/logo.svg" alt="Logomarca de Happy" />
 
-      <div>
-        <strong>Rio do Sul</strong>
-        <p>Santa Catarina</p>
-      </div>
-    </header>
+          <div>
+            <strong>Rio do Sul</strong>
+            <p>Santa Catarina</p>
+          </div>
+        </header>
 
-    <main>
-        <h1>Leve felicidade para o mundo</h1>
+        <main>
+          <h1>Leve felicidade para o mundo</h1>
 
-        <section>
+          <section>
             <p>Visite orfanatos e mude a vida de muitas crianças</p>
 
             <a href="#" title="Visite orfanatos">
-                <img src="public/images/arrow.svg" alt="Ir para o mapa">
+              <img src="public/images/arrow.svg" alt="Ir para o mapa" />
             </a>
-        </section>
-    </main> 
+          </section>
+        </main>
+      </div>
+    </div>
   </body>
 </html>
