--- a/index.html
+++ b/index.html
@@ -16,21 +16,26 @@
     <div id="page-landing">
       <div id="container">
         <header>
-          <img src="public/images/logo.svg" alt="Logomarca de Happy" />
+          <img 
+            class="animate-up"
+            id="logo" 
+            src="public/images/logo.svg" 
+            alt="Logomarca de Happy" 
+          />
 
-          <div>
+          <div class="location animate-up">
             <strong>Rio do Sul</strong>
             <p>Santa Catarina</p>
           </div>
         </header>
 
         <main>
-          <h1>Leve felicidade para o mundo</h1>
+          <h1 class="animate-up">Leve felicidade para o mundo</h1>
 
-          <section>
-            <p>Visite orfanatos e mude a vida de muitas crianças</p>
+          <section class="visit">
+            <p class="animate-up">Visite orfanatos e mude a vida de muitas crianças</p>
 
-            <a href="#" title="Visite orfanatos">
+            <a href="#" title="Visite orfanatos" class="animate-up">
               <img src="public/images/arrow.svg" alt="Ir para o mapa" />
             </a>
           </section>
