--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="shortcut icon" href="public/images/logo-icon.png" type="image/x-icon"/>
 
     <link rel="stylesheet" href="public/CSS/main.css" />
+    <link rel="stylesheet" href="public/CSS/animations.css">
+    <link rel="stylesheet" href="public/CSS/page-landing.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap" rel="stylesheet">
