--- a/orphanages.html
+++ b/orphanages.html
@@ -33,6 +33,10 @@
 
       <div id="mapid">
 
+        <a href="create-orphanage.html" class="create-orphanage" title="Cadastre um orfanato">
+          <img src="public/images/plus.svg" alt="Criar orfanato">
+        </a> 
+
       </div>
     </div>
   </body>
