--- a/orphanages.html
+++ b/orphanages.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="public/CSS/page-orphanages.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="page-orphanages">
