fim do css da página
iniciei o script para os botões com imagens

--- a/orphanage.html
+++ b/orphanage.html
@@ -40,27 +40,27 @@
           <img src="public/images/home.jpg" alt="Lar das meninas">
 
           <div class="images">
-            <button class="active" type="button">
+            <button onclick="selectImage(event)" class="active" type="button">
               <img src="public/images/home.jpg" alt="Lar das meninas">
             </button>
 
-            <button type="button">
+            <button onclick="selectImage(event)" type="button">
               <img src="public/images/home.jpg" alt="Lar das meninas">
             </button>
 
-            <button type="button">
+            <button onclick="selectImage(event)" type="button">
               <img src="public/images/home.jpg" alt="Lar das meninas">
             </button>
 
-            <button type="button">
+            <button onclick="selectImage(event)" type="button">
               <img src="public/images/home.jpg" alt="Lar das meninas">
             </button>
 
-            <button type="button">
+            <button onclick="selectImage(event)" type="button">
               <img src="public/images/home.jpg" alt="Lar das meninas">
             </button>
 
-            <button type="button">
+            <button onclick="selectImage(event)" type="button">
               <img src="public/images/home.jpg" alt="Lar das meninas">
             </button>
           </div>
@@ -99,7 +99,7 @@
               </div>
             </div>
 
-            <button class="primary button" type="button">
+            <button class="primary-button" type="button">
               <img src="public/images/whatsapp.svg" alt="Chamar no whatsapp">
               Entrar em contato
             </button>
