--- a/orphanage.html
+++ b/orphanage.html
@@ -19,6 +19,8 @@
 
     <link rel="stylesheet" href="public/CSS/main.css" />
     <link rel="stylesheet" href="public/CSS/animations.css">
+    <link rel="stylesheet" href="public/CSS/sidebar.css">
+    <link rel="stylesheet" href="public/CSS/map.css">
     <link rel="stylesheet" href="public/CSS/page-orphanage.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
