--- a/create-orphanage.html
+++ b/create-orphanage.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="public/CSS/sidebar.css">
     <link rel="stylesheet" href="public/CSS/map.css">
     <link rel="stylesheet" href="public/CSS/page-create-orphanage.css">
+    <link rel="stylesheet" href="public/CSS/forms.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -55,6 +56,16 @@
             <div class="input-block">
               <label for="name">Nome</label>
               <input name="name" id="name">
+            </div>
+
+            <div class="input-block">
+              <label for="about">Sobre</label>
+              <textarea name="about" id="about"></textarea>
+            </div>
+
+            <div class="input-block">
+              <label for="whatsapp">Número de whatsapp</label>
+              <input name="whatsapp" id="whatsapp">
             </div>
 
           </fieldset>
