algumas modificações nos inputs

--- a/create-orphanage.html
+++ b/create-orphanage.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="public/CSS/sidebar.css">
     <link rel="stylesheet" href="public/CSS/map.css">
     <link rel="stylesheet" href="public/CSS/page-create-orphanage.css">
-    <link rel="stylesheet" href="public/CSS/forms.css">
+    <link rel="stylesheet" href="public/CSS/form.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -59,7 +59,7 @@
             </div>
 
             <div class="input-block">
-              <label for="about">Sobre</label>
+              <label for="about">Sobre <span>Máximo de 300 caracteres</span></label>
               <textarea name="about" id="about"></textarea>
             </div>
 
