--- a/create-orphanage.html
+++ b/create-orphanage.html
@@ -28,7 +28,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div id="create-orphanage">
+    <div id="page-create-orphanage">
       <aside class="animate-right sidebar">
         <img src="public/images/map-marker.svg" alt="Happy">
         <footer>
@@ -66,6 +66,18 @@
             <div class="input-block">
               <label for="whatsapp">Número de whatsapp</label>
               <input name="whatsapp" id="whatsapp">
+            </div>
+
+            <div class="input-block images">
+              <label for="images">Foto</label>
+
+              <div class="images-upload" id="images">
+                <input type="images" placeholder="Cole o link da foto aqui">
+              </div>
+              <button type="
+              button">
+                <img src="public/images/add-file.svg" alt="Adicionar nova imagem">
+              </button>
             </div>
 
           </fieldset>
