organizei a tag button

--- a/create-orphanage.html
+++ b/create-orphanage.html
@@ -74,8 +74,7 @@
               <div class="images-upload" id="images">
                 <input type="images" placeholder="Cole o link da foto aqui">
               </div>
-              <button type="
-              button">
+              <button type="button">
                 <img src="public/images/add-file.svg" alt="Adicionar nova imagem">
               </button>
             </div>
