--- a/create-orphanage.html
+++ b/create-orphanage.html
@@ -83,6 +83,29 @@
 
           <fieldset>
             <legend>Visitação</legend>
+
+            <div class="input-block">
+              <label for="instructions">Instruções</label>
+              <textarea name="instructions" id="instructions"></textarea>
+            </div>
+
+            <div class="input-block">
+              <label for="opening_hours">Horários das visitas</label>
+              <input name="opening_hours" id="opening_hours">
+            </div>
+
+            <div class="input-block">
+              <label for="open_on_weekends">Atende fim de semana?</label>
+              <input type="hidden" id="open_on_weekends" name="open_on_weekends" value="1">
+
+              <div class="button-select">
+                <button type="button" class="active">Sim</button>
+                <button type="button">Não</button>
+              </div>
+
+              <button type="submit"></button>
+            </div>
+
           </fieldset>
         </form>
       </main>
