--- a/orphanage.html
+++ b/orphanage.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="public/CSS/sidebar.css">
     <link rel="stylesheet" href="public/CSS/map.css">
     <link rel="stylesheet" href="public/CSS/page-orphanage.css">
+    <link rel="stylesheet" href="public/CSS/buttons.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
