--- a/create-orphanage.html
+++ b/create-orphanage.html
@@ -46,10 +46,12 @@
 
             <div class="map-container">
               <div id="mapid"></div>
-
+              <input type="hidden" name="lat">
+              <input type="hidden" name="lng">
+              
               <footer>
                 <a href="#" id="select-point">
-                  Clique no mapa para aicionar a localização
+                  Clique no mapa para adicionar a localização
                 </a>
               </footer>
             </div>
