--- a/create-orphanage.html
+++ b/create-orphanage.html
@@ -84,8 +84,8 @@
                 </div>
 
               </div>
-              <button type="button">
-                <img src="public/images/add-file.svg" alt="Adicionar nova imagem">
+              <button onclick="addPhotoField()" type="button">
+                <img src="public/images/add-file.svg" alt="Nova imagem">
               </button>
             </div>
 
