--- a/create-orphanage.html
+++ b/create-orphanage.html
@@ -78,7 +78,7 @@
 
                 <div class="new-upload">
                   <input type="images" placeholder="Cole o link da foto aqui" required>
-                  <span>
+                  <span onclick="deleteField(event)">
                     <img src="public/images/remove-file.svg" alt="Remover Foto">
                   </span>
                 </div>
