--- a/create-orphanage.html
+++ b/create-orphanage.html
@@ -77,7 +77,7 @@
               <div class="images-upload" id="images">
 
                 <div class="new-upload">
-                  <input type="images" placeholder="Cole o link da foto aqui" required>
+                  <input name="images" type="images" placeholder="Cole o link da foto aqui" required>
                   <span onclick="deleteField(event)">
                     <img src="public/images/remove-file.svg" alt="Remover Foto">
                   </span>
@@ -110,8 +110,13 @@
               <input type="hidden" id="open_on_weekends" name="open_on_weekends" value="1" required>
 
               <div class="button-select">
-                <button type="button" class="active">Sim</button>
-                <button type="button">Não</button>
+                <button data-value="1"
+                  onclick="toggleSelect(event)" 
+                  type="button" 
+                  class="active">Sim</button>
+                <button data-value="0"
+                  onclick="toggleSelect(event)" 
+                  type="button">Não</button>
               </div>
 
               <button type="submit" class="primary-button">
